kubernetes/spark-master-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-master
  namespace: gcbi-ns-test
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master
  template:
    metadata:
      labels:
        component: spark-master
    spec:
      imagePullSecrets:             
      - name: imagepull-secret
      containers:
        - name: spark-master
          image: swr.cn-north-1.myhuaweicloud.com/gaojx/spark:git_version
          command: ["/spark-master"]
          ports:
            - containerPort: 7077
            - containerPort: 8080
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 1Gi
