kubernetes/spark-worker-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: spark-worker
  namespace: gcbi-ns-test
spec:
  replicas: 2
  selector:
    matchLabels:
      component: spark-worker
  template:
    metadata:
      labels:
        component: spark-worker
    spec:
      containers:
        - name: spark-worker
          image: swr.cn-north-1.myhuaweicloud.com/gaojx/spark:git_version

          command: ["/spark-worker"]
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 100m
